css/cover.css
/*
 * Global Styles
 */

 body {
  background-color: #75BACC;
  font-family: "Coming Soon", cursive;
}

.header {
  display: flex;
  justify-content: center;
  margin: 3rem 0;
}

.footer, .jesus {
  display: flex;
  justify-content: center;
}

.marquee {
  font-size: 1.25rem;
  display: block;
  width: 90%;
  margin: 0 auto;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
}

.marquee a {
  display: inline-block;
  animation: scroll-left 10s linear infinite;
  color: inherit;
  text-decoration: underline;
}

@keyframes scroll-left {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(-100%);
  }
}

.links {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.link-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 1rem 0; /* Added margin to separate link items */
}

.link-item a {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-decoration: none;
  color: #333;
}

.link-item a p {
  text-decoration: none;
}

.links img {
  width: 9rem;
  margin: 2rem 4rem;
}

.link-item p {
  margin-top: -1.5rem; /* Adjust the spacing to bring text closer to the image */
  margin-bottom: 1rem; /* Add margin to create space between the paragraphs */
  text-align: center;
  color: #333;
  font-size: 1.25rem;
  max-width: 10rem; /* Ensure the text doesn't exceed the width of the icon */
  word-wrap: break-word; /* Allow long words to break and wrap to the next line */
}

@media (max-width: 759px) {
  .link-item {
    width: 100%;
  }

  .link-item a {
    width: 100%;
  }

  .links img {
    width: 6rem;
    margin: 1.5rem 0;
  }

  .link-item p {
    max-width: 100%;
    font-size: 1rem;
  }
}

@media (min-width: 760px) {
  .links {
    flex-direction: row;
    flex-wrap: wrap;
  }

  .links img {
    width: 8rem;
  }
}

